[package]
name = "niyodo"
version = "0.1.0"
authors = ["Mosakuji Hokuto <shikieiki@yamaxanadu.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["postgres_pool"] }
chrono = "0.4"
postgres = { version = "0.15", features = [ "with-chrono"]}
serde = { version = "1.0", features = ["derive"] }
